--- a/NotepadOnlineMobile/NotepadOnlineMobile/ChangePasswordPage.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/ChangePasswordPage.xaml
@@ -7,10 +7,10 @@
     <ContentPage.Content>
         <Grid>
             <StackLayout Margin="30" VerticalOptions="Center">
-                <Entry Text="{Binding Password}" IsPassword="True" Placeholder="Current password" Style="{StaticResource LoginEntry}"/>
-                <Entry Text="{Binding NewPassword}" IsPassword="True" Placeholder="New password" Style="{StaticResource LoginEntry}"/>
-                <Entry Text="{Binding ConfirmNewPassword}" IsPassword="True" Placeholder="Confirm new password" Style="{StaticResource LoginEntry}"/>
-                <Button Clicked="Change_Clicked" Text="Change" Margin="0,10,0,0" Style="{StaticResource LoginButton}"/>
+                <Entry Text="{Binding Password}" IsPassword="True" Placeholder="{x:Static local:Resource.CurrentPassword}" Style="{StaticResource LoginEntry}"/>
+                <Entry Text="{Binding NewPassword}" IsPassword="True" Placeholder="{x:Static local:Resource.NewPassword}" Style="{StaticResource LoginEntry}"/>
+                <Entry Text="{Binding ConfirmNewPassword}" IsPassword="True" Placeholder="{x:Static local:Resource.ConfirmNewPassword}" Style="{StaticResource LoginEntry}"/>
+                <Button Clicked="Change_Clicked" Text="{x:Static local:Resource.Change}" Margin="0,10,0,0" Style="{StaticResource LoginButton}"/>
             </StackLayout>
             <local:LoadingView Showed="{Binding IsBusy}"/>
         </Grid>
