--- a/NotepadOnlineMobile/NotepadOnlineMobile/LoginPage.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/LoginPage.xaml
@@ -7,11 +7,11 @@
     <ContentPage.Content>
         <Grid>
             <StackLayout Margin="30" VerticalOptions="Center">
-                <Label FontSize="30" Margin="0,0,0,10" Text="Log in" HorizontalOptions="Center" TextColor="{StaticResource TextDark}"/>
-                <Entry Text="{Binding Email}" Keyboard="Email" Placeholder="E-mail" Style="{StaticResource LoginEntry}"/>
-                <Entry Text="{Binding Password}" IsPassword="True" Placeholder="Password" Style="{StaticResource LoginEntry}"/>
-                <Button Clicked="Signin_Clicked" Text="Sign in" Margin="0,10,0,0" Style="{StaticResource LoginButton}"/>
-                <Label FontSize="18" Margin="0,10,0,0" Text="Forgot password?" HorizontalOptions="Center" TextColor="{StaticResource TextLight}">
+                <Label FontSize="30" Margin="0,0,0,10" Text="{x:Static local:Resource.Log_in}" HorizontalOptions="Center" TextColor="{StaticResource TextDark}"/>
+                <Entry Text="{Binding Email}" Keyboard="Email" Placeholder="{x:Static local:Resource.Email}" Style="{StaticResource LoginEntry}"/>
+                <Entry Text="{Binding Password}" IsPassword="True" Placeholder="{x:Static local:Resource.Password}" Style="{StaticResource LoginEntry}"/>
+                <Button Clicked="Signin_Clicked" Text="{x:Static local:Resource.Sign_in}" Margin="0,10,0,0" Style="{StaticResource LoginButton}"/>
+                <Label FontSize="18" Margin="0,10,0,0" Text="{x:Static local:Resource.ForgotPassword}" HorizontalOptions="Center" TextColor="{StaticResource TextLight}">
                     <Label.GestureRecognizers>
                         <TapGestureRecognizer Tapped="Forgot_Clicked"/>
                     </Label.GestureRecognizers>
