--- a/NotepadOnlineMobile/NotepadOnlineMobile/RegisterPage.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/RegisterPage.xaml
@@ -7,11 +7,11 @@
     <ContentPage.Content>
         <Grid>
             <StackLayout Margin="30" VerticalOptions="Center">
-                <Label FontSize="30" Margin="0,0,0,10" Text="New account" HorizontalOptions="Center" TextColor="{StaticResource TextDark}"/>
-                <Entry Text="{Binding Email}" Keyboard="Email" Placeholder="E-mail" Style="{StaticResource LoginEntry}"/>
-                <Entry Text="{Binding Password}" IsPassword="True" Placeholder="Password" Style="{StaticResource LoginEntry}"/>
-                <Entry Text="{Binding ConfirmPassword}" IsPassword="True" Placeholder="Confirm password" Style="{StaticResource LoginEntry}"/>
-                <Button Clicked="Register_Clicked" Text="Sign up" Margin="0,10,0,0" Style="{StaticResource LoginButton}"/>
+                <Label FontSize="30" Margin="0,0,0,10" Text="{x:Static local:Resource.NewAccount}" HorizontalOptions="Center" TextColor="{StaticResource TextDark}"/>
+                <Entry Text="{Binding Email}" Keyboard="Email" Placeholder="{x:Static local:Resource.Email}" Style="{StaticResource LoginEntry}"/>
+                <Entry Text="{Binding Password}" IsPassword="True" Placeholder="{x:Static local:Resource.Password}" Style="{StaticResource LoginEntry}"/>
+                <Entry Text="{Binding ConfirmPassword}" IsPassword="True" Placeholder="{x:Static local:Resource.ConfirmPassword}" Style="{StaticResource LoginEntry}"/>
+                <Button Clicked="Register_Clicked" Text="{x:Static local:Resource.Sign_up}" Margin="0,10,0,0" Style="{StaticResource LoginButton}"/>
             </StackLayout>
             <local:LoadingView Showed="{Binding IsBusy}"/>
         </Grid>
