--- a/NotepadOnlineMobile/NotepadOnlineMobile/Views/LoadingView.xaml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/Views/LoadingView.xaml
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:NotepadOnlineMobile"
              x:Class="NotepadOnlineMobile.LoadingView">
   <ContentView.Content>
         <Grid>
             <BoxView Color="Black" CornerRadius="20" Opacity="0.9" WidthRequest="100" HeightRequest="100" HorizontalOptions="Center" VerticalOptions="Center"/>
             <StackLayout VerticalOptions="Center">
                 <ActivityIndicator Color="White" IsRunning="True"/>
-                <Label Text="Wait..." TextColor="White" HorizontalOptions="Center"/>
+                <Label Text="{x:Static local:Resource.Wait}" TextColor="White" HorizontalOptions="Center"/>
             </StackLayout>
         </Grid>
     </ContentView.Content>
